Bug 155425 - UI Can't Select top right color
Summary: UI Can't Select top right color
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.5.3.2 release
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.6.0
Keywords:
Depends on:
Blocks:
 
Reported: 2023-05-21 11:44 UTC by paps
Modified: 2025-12-09 12:41 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot of color selection (89.38 KB, image/png)
2023-05-22 12:24 UTC, Regina Henschel
Details
The scrollbar overrides the right column (217.21 KB, image/jpeg)
2023-05-31 09:45 UTC, paps
Details

Note You need to log in before you can comment on or make changes to this bug.
Description paps 2023-05-21 11:44:20 UTC
You cannot choose the rightmost foreground/background color if you select the html option
Comment 1 Regina Henschel 2023-05-21 20:16:52 UTC
I cannot reproduce the problem.

Please specify which object do you want to color and which tool do you use.
Comment 2 paps 2023-05-22 09:31:49 UTC
Sorry, I realized now that I wasn't clear.
Purpose: to change the background of a cell in calc.
Select the "html" palette. The entire right-hand column of the pallette is not selectable because it is covered by the cursor
Comment 3 Regina Henschel 2023-05-22 12:24:25 UTC
Created attachment 187435 [details]
Screenshot of color selection

I can still not reproduce the problem. The attached screenshot shows how the HTML palette looks for me. There is no problem using the colors in the right column.

Please attach a screenshot of how it looks for you.

I have used Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 4829a85d0753c93419bd46b1d50bcfa6f0f3f1da
CPU threads: 8; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: de-DE (en_US); UI: en-US
Calc: CL threaded

Please add such information in addition. To copy the information to clipboard go to Help > About and click on the 'Version Information' button.
Comment 4 paps 2023-05-31 09:45:38 UTC
Created attachment 187616 [details]
The scrollbar overrides the right column

Im sorry for the delay, but I was really busy.
Comment 5 Regina Henschel 2023-05-31 11:53:25 UTC
Thank you for the screen shot. Now it is clear, which UI element do you use. But I still cannot reproduce it. So the problem might be specific for Linux. Please add the information about your system as described in comment 3.
Comment 6 raal 2023-05-31 14:31:00 UTC
With gtk3 it's hard to select colors in right column - slider appears

Version: 7.6.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: dc50abb7f972c53fcca08d2ac3627e7848456520
CPU threads: 4; OS: Linux 5.19; UI render: default; VCL: gtk3
Locale: cs-CZ (cs_CZ.UTF-8); UI: en-US
Calc: threaded

But paps' printscreen looks little different. Please copy and paste here the contents of your Help - About from your LibreOffice. This allows us to know more about your system.
Comment 7 paps 2023-05-31 19:04:20 UTC
This is the version I use for business

Version: 7.5.3.2 (X86_64) / LibreOffice Community
Build ID: 9f56dff12ba03b9acd7730a5a481eea045e468f3
CPU threads: 4; OS: Linux 5.4; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

and the problem is present in this version too

Version: 7.6.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 1349f140fcc49e5da78482ca3db09663ccdae0a9
CPU threads: 4; OS: Linux 5.4; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 8 raal 2023-06-01 07:19:25 UTC
@Caolan, please can you take a look? Thank you
Comment 9 Caolán McNamara 2023-06-01 15:57:23 UTC
These are gtk's overlay scrollbars which is uses by default. I don't know if there is a perfect solution. They are fairly neat in general, and dismiss on moving away from them and appear on proximity. It is the case that for the color picker the last column of colors is about the same size as the scrollbar so it is finicky to move far enough away to collapse the scrollbar and move close enough not to activate it but enough to get over the color
Comment 10 Caolán McNamara 2023-06-01 16:20:01 UTC
lets try turning off the overlay scrollbar for this individual colorwindow
Comment 11 Commit Notification 2023-06-01 18:16:37 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/068f28aa67bf7a17b722b3342689c845dda533f7

Related: tdf#155425 use preferred_size instead of allocated_width

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Commit Notification 2023-06-01 18:16:39 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/0fff72154d0dbb44e09546ff59f8a5ec288dfd2e

Resolves: tdf#155425 turn off overlay scrolling for color selector

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 Caolán McNamara 2023-06-01 18:57:18 UTC
lets try that in trunk
Comment 14 BogdanB 2023-06-01 19:06:21 UTC
Thanks, Caolan, for fixing, and paps for reporting. 

Everything fine in
Version: 7.6.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 0fff72154d0dbb44e09546ff59f8a5ec288dfd2e
CPU threads: 16; OS: Linux 5.19; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded

Was bad in 7.5, 80% covered by scroll
Version: 7.5.3.2 (X86_64) / LibreOffice Community
Build ID: 9f56dff12ba03b9acd7730a5a481eea045e468f3
CPU threads: 16; OS: Linux 5.19; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded
Comment 15 paps 2023-06-01 20:13:00 UTC
Sorry but doen't work for me

Version: 7.6.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 70fd835b4cf75e386ee115c705241a4059fb68a8
CPU threads: 4; OS: Linux 5.4; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 16 BogdanB 2023-06-01 20:37:10 UTC
Paps, wait one more day and test again. You have a version some hours older than mine.
Comment 17 BogdanB 2023-06-02 04:30:09 UTC
The version should remain unchanged, is the oldest version tested which reproduced the bug.
Comment 18 paps 2023-06-04 17:57:36 UTC
tested with

Version: 7.6.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: df6e819a8f76f927bd7a568a95a535299e795a06
CPU threads: 4; OS: Linux 5.4; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

and it works.