Related: tdf#155425 use preferred_size instead of allocated_width

the scrollbar might not actually be visible so has no real
allocated width yet

Change-Id: Id15af9e481b9971bf79f16da16581f820f8303d8
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/152506
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>